tests/NormalTests/paczka1/fuzzy1/90547402.err
Error in line 2: MRA7KPZEdM A982 35,9
Error in line 13: MRA7KPZEdM S17 22,6
Error in line 14: MRA7KPZEdM S591 52,0
Error in line 22: 2B S591 23,8
Error in line 7: t4crhGDFq8 A982 78,1
Error in line 26: UHjAm S591 12,6
Error in line 33: S645 S591 60,0
